--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "packageManager": "pnpm@7.22.0",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -12,7 +13,8 @@
     "@vitejs/plugin-react-swc": "^3.0.1",
     "typescript": "^4.9.4",
     "vite": "^4.0.3",
-    "vite-plugin-glsl": "^1.0.2"
+    "vite-plugin-glsl": "^1.0.2",
+    "vite-plugin-live-reload": "^3.0.1"
   },
   "dependencies": {
     "twgl.js": "^5.3.0"
