--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -60,7 +60,7 @@ jobs:
           #
           # You may remove this line if you want to manage the configuration yourself.
           static_site_generator: vite
-            ${{ runner.os }
+            ${{ runner.os }}
       - name: Install dependencies
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
       - name: Build with bite
