--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,29 +29,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
-      - name: Detect package manager
-        id: detect-package-manager
-        run: |
-          if [ -f "${{ github.workspace }}/yarn.lock" ]; then
-            echo "manager=yarn" >> $GITHUB_OUTPUT
-            echo "command=install" >> $GITHUB_OUTPUT
-            echo "runner=yarn" >> $GITHUB_OUTPUT
-            exit 0
-          elif [ -f "${{ github.workspace }}/package.json" ]; then
-            echo "manager=npm" >> $GITHUB_OUTPUT
-            echo "command=ci" >> $GITHUB_OUTPUT
-            echo "runner=npx --no-install" >> $GITHUB_OUTPUT
-            exit 0
-          else
-            echo "Unable to determine packager manager"
-            exit 1
-          fi
+        uses: actions/checkout@
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
           node-version: "18"
-          cache: ${{ steps.detect-package-manager.outputs.manager }}
+        run: corepack enable
       - name: Setup Pages
         uses: actions/configure-pages@v2
         with:
@@ -62,9 +45,9 @@ jobs:
           static_site_generator: vite
             ${{ runner.os }}
       - name: Install dependencies
-        run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
+        run: pnpm i
       - name: Build with bite
-        run: ${{ steps.detect-package-manager.outputs.runner }} vite build
+        run: pnpm vite build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
