--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -34,6 +34,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: "18"
+      - name: corepack
         run: corepack enable
       - name: Setup Pages
         uses: actions/configure-pages@v2
