--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "packageManager": "pnpm@7.22.0",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -18,5 +17,6 @@
   },
   "dependencies": {
     "twgl.js": "^5.3.0"
-  }
+  },
+  "packageManager": "pnpm@9.0.5+sha512.a722575c18fd791f9ef71e387c6e16cc03c90d859b9b0998d0428ca0e3220828b32a96e6de73cea34edbc0f50824771b1a69c7ea36b86daa3b89c7e6d9a3d912"
 }
